k8s_startup_scripts/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: default
spec:
  rules:
    - host: demo1.localdev.me
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: demo-service1
                port:
                  number: 80
    - host: demo2.localdev.me
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: demo-service2
                port:
                  number: 80
  # This section is only required if TLS is to be enabled for the Ingress
  #tls:
   # - hosts:
    #    - demo1.localdev.me
     #   - demo2.localdev.me
      #secretName: demo-tls-secret
